# ElementZero

./: .clang-format  .gitignore  .gitmodules  README.md  eatpdb.yaml  ez.d.ts
.github/workflows/: ci.yml
Base/: compat.cpp  dllmain.cpp
BuiltinMods/BasicAntiCheat/: dllmain.cpp
BuiltinMods/Blacklist/: commands.cpp  dllmain.cpp
BuiltinMods/BossBarSupport/: bossbar.cpp
BuiltinMods/ChatAPI/: dllmain.cpp
BuiltinMods/DebugTool/: dllmain.cpp
BuiltinMods/Essentials/: teleport.cpp  warp.cpp
BuiltinMods/Experimental/: global.h  hook.cpp
BuiltinMods/FakeSeed/: CMakeLists.txt  dllmain.cpp  global.h
BuiltinMods/LandManager/: CMakeLists.txt
BuiltinMods/PacketDumper/: dllmain.cpp
BuiltinMods/ScriptingSupport/: dllmain.cpp  hooks.cpp
BuiltinMods/SignCommand/: dllmain.cpp
BuiltinMods/SpawnProtection/: dllmain.cpp
MinecraftHeaders/Actor/: Actor.h  ActorType.h  Mob.h  Player.h
MinecraftHeaders/Block/: Block.h  BlockLegacy.h  VanillaBlockTypes.h  VanillaBlocks.h
MinecraftHeaders/BlockActor/: BlockActor.h  BlockActorType.h  Chest.h
MinecraftHeaders/Command/: CommandOrigin.h  CommandOutputParameter.h  CommandRegistry.h  CommandSelectorBase.h  CommandUtils.h  TeleportCommand.h
MinecraftHeaders/Container/: Container.h  FillingContainer.h  Inventory.h  PlayerInventory.h  RandomizableBlockActorContainerBase.h  RandomizableBlockActorFillingContainer.h  SimpleContainer.h
MinecraftHeaders/Core/: Certificate.h  ConnectionRequest.h  DataItem.h  ExtendedCertificate.h  Minecraft.h  NBT.h  Packet.h  SemVersion.h  UnverifiedCertificate.h  json.h  mce.h
(+83 files in other folders)
